--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: macosailscale + macOS VNC + Roblox
+name: macOS: Tailscale + native VNC (Screen Sharing)
 
 on:
   workflow_dispatch:
     inputs:
-      ROBLOX_URL:
-        description: "Optional: direct URL to Roblox .dmg (otherwise auto)"
+      VNC_PASS:
+        description: "Opsional: VNC password (maks 8 char). Kalau kosong akan digenerate & ditampilkan."
         required: false
         default: ""
 
@@ -14,14 +14,14 @@ jobs:
     timeout-minutes: 360
 
     steps:
-      - name: Print runner info
+      - name: Info
         shell: bash
         run: |
           sw_vers
-          uname -a
-          echo "Runner: $RUNNER_NAME / $RUNNER_OS / $RUNNER_ARCH"
+          echo "User: $(whoami)"
+          echo "Home: $HOME"
 
-      - name: Ensure Homebrew & install Tailscale
+      - name: Install Tailscale via Homebrew
         shell: bash
         run: |
           if ! command -v brew >/dev/null 2>&1; then
@@ -29,140 +29,75 @@ jobs:
           fi
           eval "$(/opt/homebrew/bin/brew shellenv 2>/dev/null || true)"
           eval "$(/usr/local/bin/brew shellenv 2>/dev/null || true)"
-
           brew update
           brew install tailscale || brew upgrade tailscale || true
-          command -v tailscale && tailscale version
+          tailscale version || true
 
-      - name: Start tailscaled & connect to tailnet
+      - name: Start tailscaled & connect
         shell: bash
         env:
           TS_AUTH: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
           set -euo pipefail
           if [ -z "${TS_AUTH:-}" ]; then
-            echo "Missing secret: TAILSCALE_AUTH_KEY" >&2
-            exit 1
+            echo "Missing secret: TAILSCALE_AUTH_KEY" >&2; exit 1
           fi
-
           sudo nohup tailscaled --tun=userspace-networking > /tmp/tailscaled.log 2>&1 &
-
           for i in $(seq 1 20); do
             tailscale status >/dev/null 2>&1 && break || sleep 1
           done
-
           HOST="gha-macos-${GITHUB_RUN_ID}"
           sudo tailscale up --authkey="${TS_AUTH}" --hostname="${HOST}" --accept-routes --accept-dns || \
           sudo tailscale up --authkey="${TS_AUTH}" --hostname="${HOST}"
-
-          ip4="$(tailscale ip -4 | awk '/^ *100\./ {print $1; exit}')"
+          ip4="$(tailscale ip -4 | awk '/^ *100\./{print $1;exit}')"
           if [ -z "$ip4" ]; then
-            echo "No Tailscale IPv4 yet"
-            tailscale status || true
-            tail -n 100 /tmp/tailscaled.log || true
-            exit 1
+            echo "No Tailscale IPv4 yet"; tailscale status || true; tail -n 100 /tmp/tailscaled.log || true; exit 1
           fi
           echo "TAILSCALE_IP=$ip4" >> "$GITHUB_ENV"
           echo "Tailscale IP: $ip4"
 
-      - name: Create VNC user & enable macOS VNC (Screen Sharing)
+      - name: Enable macOS Screen Sharing (VNC) for current user
         shell: bash
         env:
-          VNC_PASS_SECRET: ${{ secrets.VNC_PASS }}
+          VNC_PASS_INPUT: ${{ github.event.inputs.VNC_PASS }}
         run: |
           set -euo pipefail
 
-          # ---- password: pakai secret kalau ada; kalau kosong generate 8 char & CETAK ----
-          if [ -n "${VNC_PASS_SECRET:-}" ]; then
-            VNC_PASS="$VNC_PASS_SECRET"
+          # --- password: pakai input kalau ada; kalau kosong generate 8 char & TAMPILKAN ---
+          if [ -n "${VNC_PASS_INPUT:-}" ]; then
+            VNC_PASS="$VNC_PASS_INPUT"
           else
             VNC_PASS="$(LC_ALL=C tr -dc 'A-Za-z0-9' </dev/urandom | head -c8)"
-            # cetak ke log (insecure, tapi diminta)
             echo "::notice::Generated VNC password: ${VNC_PASS}"
           fi
-          # enforce batas 8 char (Apple VNC legacy)
-          VNC_PASS="${VNC_PASS:0:8}"
+          VNC_PASS="${VNC_PASS:0:8}"   # batas 8
 
-          USER="ghvnc"
-          if ! id -u "$USER" >/dev/null 2>&1; then
-            sudo sysadminctl -addUser "$USER" -fullName "GH VNC User" -password "$VNC_PASS" -home "/Users/$USER"
-            sudo createhomedir -c -u "$USER" >/dev/null 2>&1 || true
-          else
-            sudo dscl . -passwd "/Users/$USER" "$VNC_PASS"
-          fi
-          sudo chown -R "$USER":staff "/Users/$USER" || true
-          echo "VNC_USER=$USER" >> "$GITHUB_ENV"
-          echo "VNC_PASS=$VNC_PASS" >> "$GITHUB_ENV"   # simpan supaya step terakhir bisa print lagi
+          CURUSER="$(whoami)"
+          echo "VNC will allow user: $CURUSER"
 
           KICK="/System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart"
 
+          # Aktifkan ARD / Screen Sharing + legacy VNC password
           sudo "$KICK" -activate
           sudo "$KICK" -configure -access -on
           sudo "$KICK" -configure -clientopts -setvnclegacy -vnclegacy yes
           sudo "$KICK" -configure -setvncpw -vncpw "$VNC_PASS"
-          sudo "$KICK" -configure -users "$USER" -privs -all
+
+          # Beri semua priv ke user 'runner' (atau user saat ini)
+          sudo "$KICK" -configure -users "$CURUSER" -privs -all
           sudo "$KICK" -restart -agent
 
-          # (opsional) SSH buat troubleshooting
+          # Pastikan service screensharingd aktif
+          sudo launchctl unload -w /System/Library/LaunchDaemons/com.apple.screensharing.plist 2>/dev/null || true
+          sudo launchctl load  -w /System/Library/LaunchDaemons/com.apple.screensharing.plist
+
+          # (opsional) SSH
           sudo systemsetup -setremotelogin on
 
-      - name: Install Roblox (DMG)
-        shell: bash
-        env:
-          ROBLOX_URL_INPUT: ${{ github.event.inputs.ROBLOX_URL }}
-        run: |
-          set -euo pipefail
-          TMP="$(mktemp -d)"
-          cd "$TMP"
+          # simpan pw utk step terakhir
+          echo "VNC_PASS=$VNC_PASS" >> "$GITHUB_ENV"
 
-          if [ -n "${ROBLOX_URL_INPUT:-}" ]; then
-            URL="$ROBLOX_URL_INPUT"
-          else
-            VER_JSON="$(curl -fsS 'https://clientsettings.roblox.com/v2/client-version/MacPlayer' || true)"
-            VER="$(echo "$VER_JSON" | grep -Eo 'version-[0-9A-Za-z-]+' | head -n1 || true)"
-            if [ -n "$VER" ]; then
-              URL="https://setup.rbxcdn.com/mac/${VER}-Roblox.dmg"
-            else
-              URL="https://setup.rbxcdn.com/Roblox.dmg"
-            fi
-          fi
-
-          echo "Downloading: $URL"
-          curl -fL --retry 5 -o Roblox.dmg "$URL"
-
-          MOUNT="$(hdiutil attach Roblox.dmg -nobrowse -quiet | awk '/Volumes/ {print $3; exit}')"
-          if [ -z "$MOUNT" ]; then
-            echo "Failed to mount Roblox.dmg" >&2
-            exit 1
-          fi
-
-          if compgen -G "$MOUNT/*.pkg" > /dev/null; then
-            PKG="$(ls "$MOUNT"/*.pkg | head -n1)"
-            sudo installer -pkg "$PKG" -target /
-          elif [ -d "$MOUNT/Roblox.app" ]; then
-            sudo cp -R "$MOUNT/Roblox.app" /Applications/
-          else
-            APP="$(find "$MOUNT" -maxdepth 2 -name 'Roblox.app' -type d -print -quit || true)"
-            if [ -n "$APP" ]; then
-              sudo cp -R "$APP" /Applications/
-            else
-              echo "Roblox.app/.pkg not found in DMG" >&2
-              ls -la "$MOUNT" || true
-              hdiutil detach "$MOUNT" -quiet || true
-              exit 1
-            fi
-          fi
-
-          hdiutil detach "$MOUNT" -quiet || true
-
-          if [ -d "/Applications/Roblox.app" ]; then
-            echo "Roblox installed at /Applications/Roblox.app"
-          else
-            echo "Roblox install failed" >&2
-            exit 1
-          fi
-
-      - name: Print connection info & keep alive
+      - name: Info koneksi & keep alive
         shell: bash
         timeout-minutes: 360
         run: |
@@ -170,15 +105,14 @@ jobs:
           echo "=== CONNECTION INFO ==="
           echo "Tailscale IP : ${TAILSCALE_IP}"
           echo "VNC address  : ${TAILSCALE_IP}:5900"
-          echo "VNC user     : ${VNC_USER}"
+          echo "User (ScreenSharing): $(whoami)"
           echo "VNC password : ${VNC_PASS}"
-          echo "Roblox path  : /Applications/Roblox.app"
           echo "tailscaled log: /tmp/tailscaled.log"
           echo "======================="
           echo ""
-
           while true; do
             date
             tailscale status | head -n 20 || true
+            sudo launchctl list | grep -i screensharing || true
             sleep 300
           done
